+ Added a button to profile backgrounds in your inventory to set them as your background with a single click
+ Added release date information for unreleased games on wishlist pages
+ Added an "Add to your wishlist" button on other people's wishlist pages
+ Added an option to skip the "Got Steam" dialog on store pages
+ Added a link to the web chat to the Community dropdown menu when logged in
: Changing view options on the badges page no longer requires a page reload
: Improved performance of continuous scolling feature
: Changing sorting options on wishlist pages will no longer cause the page to reload
: Fixed a bug where some functions weren't working correctly for users who hadn't configured a custom URL
: Fixed a bug that would occur when trying to leave multiple groups if there was an error on the page
: Fixed a bug that caused the homepage carousel to not display correctly until it scrolled past the first item
: Fixed a bug where adding games to your wishlist from the community hub would result in an error


v8.4
-----
+ Added inventory market support for various games such as H1Z1 and Battleblock Theater
+ Added ability to determine difference between JPY and CNY currency codes
: Fixed an issue where search results would be duplicated or incorrect under certain circumstances
: Fixed a bug where some market sections weren't being totaled correctly
: Fixed a bug where "Open in Steam" would not work if Family settings were enabled
: Fixed several bugs where user's country code wouldn't be properly detected
: Fixed a bug where "Add to Wishlist" would sometimes not display properly when browsing discovery queue

v8.3
-----
+ Added a toggle to the market page to hide the list of individual games
+ Added a new feature that allows you to leave several groups at once without having to reload the page
+ Added a button to store pages to open that link in the Steam client
+ Added pricing support for Sila Games, Playfield, and Imperial Games